classDiagram
    class Task {
        +str name
        +int duration
        +str priority
        +str frequency
        +bool completed
        +mark_complete()
        +reset()
    }

    class Pet {
        +str name
        +str species
        +int age
        +str special_needs
        +list tasks
        +add_task(task)
        +get_pending_tasks() list
    }

    class Owner {
        +str name
        +int available_time
        +str preferences
        +list pets
        +add_pet(pet)
        +get_all_tasks() list
        +get_all_pending_tasks() list
    }

    class Scheduler {
        +Owner owner
        +generate_plan() list
        +get_summary() str
    }

    Pet "1" --> "*" Task : has
    Owner "1" --> "*" Pet : owns
    Owner "1" --> "1" Scheduler : uses
    Scheduler "1" --> "1" Owner : reads from
